--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,297 @@
-body {
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+
+
+/* css */
+
+body {
+  width: 1440px;
+  height: 4500px;
+  background-color: #EBE3CC;
+  margin: 0;
+}
+
+nav {
+  display: flex;
+}
+
+ul {}
+
+li {
+  position: sticky;
+  display: inline-block;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  top: 44px;
+  /* left: 440px; */
+  font-size: 14px;
+}
+
+ul li a {
+
+  text-decoration: none;
+  color: #062D3E;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 400;
+  line-height: 38px;
+
+  margin-left: 44px;
+  top: 44px;
+}
+
+a {
+  text-decoration: none;
+  color: #062D3E;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 400;
+  line-height: 38px;
+
+
+  top: 44px;
+}
+
+.main {}
+
+.nav_title {
+  margin: 44px 0 0 171px;
+  font-size: 21px;
+  font-weight: 600;
+  /* line-height: 38px; */
+  top: 44px;
+  font-family: 'Josefin Sans', sans-serif;
+
+}
+
+.main_left_blue_div {
+  /* position: absolute; */
+  width: 397px;
+  height: 805px;
+  margin-top: -82px;
+  margin-left: 1043px;
+
+  background-color: #062D3E;
+}
+
+.sign_up_btn {
+  /* box-sizing: border-box; */
+  display: flex;
+  /* flex-direction: row; */
+  /* align-items: flex-end; */
+  position: relative;
+
+  width: 140px;
+  height: 62px;
+  top: 68px;
+  margin-left: 92px;
+  padding: 12px 32px;
+  gap: 10px;
+
+  background-color: rgba(0, 0, 0, 0);
+  color: rgb(255, 255, 255);
+
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 198px;
+
+  font-size: 20px;
+  line-height: 36px;
+}
+
+.vector_blue {
+  position: absolute;
+  margin-top: -821px;
+  margin-left: 900px;
+}
+
+
+.animal_gallery {
+  display: flex;
+  position: relative;
+  top: 805px;
+  width: 1440px;
+  height: 306px;
+  background-color: #ED5C01;
+}
+
+
+
+.our_service {}
+
+.explore {
+  position: relative;
+  top: 1972px;
+  width: 100%;
+  height: 761px;
+  background-color: #189CAB;
+}
+
+.customer_reviews {}
+
+.double_div {
+  position: relative;
+  display: flex;
+  top: 3600px;
+
+}
+
+.dog_div {
+  position: relative;
+  /* display: inline-block; */
+  vertical-align: middle;
+  /* top: 3600px; */
+  width: 50%;
+  height: 324px;
+  background-color: #FBBD08;
+}
+
+.subscribe {
+  position: relative;
+  /* display: disp; */
+  /* vertical-align: middle; */
+  /* top: 3600px; */
+  width: 50%;
+  height: 324px;
+  background-color: #ED5C01;
+}
+
+footer {
+  position: relative;
+  left: 0%;
+  top: 3600px;
+  height: 380px;
+  background-color: #062D3E;
 }
