--- a/src/index.css
+++ b/src/index.css
@@ -1,297 +1,519 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+:root {
+  --primaryBlue: #062D3E;
+  --primaryOrange: #ED5C01;
+  --lightBlue: #189CAB;
+  --backgroundColor: #EBE3CC;
+  --yellow: #FBBD08;
+  --normal: #224453;
+  --gray: #EBE3CC;
+}
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+body {
   margin: 0;
   padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+  background-color: var(--backgroundColor);
+  font-family: 'Josefin Sans', sans-serif;
 }
 
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-
-
-/* css */
-
-body {
-  width: 1440px;
-  height: 4500px;
-  background-color: #EBE3CC;
+body * {
   margin: 0;
+  padding: 0;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
-nav {
+.container {
+  margin: 0 auto;
+  width: 80%;
+}
+
+@media screen and (max-width: 480px) {
+  .container {
+    width: 95%;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 90%;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .container {
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .container {
+    width: 85%;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    width: 1300px;
+  }
+}
+
+.header__logo {
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 21px;
+  letter-spacing: 1%;
+  color: var(--primaryBlue);
+}
+
+header {
+  padding: 44px 0;
+  width: 100%;
+  height: auto;
+}
+
+.header__content {
   display: flex;
-}
-
-ul {}
-
-li {
-  position: sticky;
-  display: inline-block;
   justify-content: space-between;
   align-items: center;
-  list-style: none;
-  top: 44px;
-  /* left: 440px; */
-  font-size: 14px;
+  width: 100%;
+  /* padding: 30px 0; */
 }
 
-ul li a {
+.header__logo {}
 
-  text-decoration: none;
-  color: #062D3E;
-  font-family: 'Josefin Sans', sans-serif;
-  font-weight: 400;
-  line-height: 38px;
+.header__nav {}
 
-  margin-left: 44px;
-  top: 44px;
-}
-
-a {
-  text-decoration: none;
-  color: #062D3E;
-  font-family: 'Josefin Sans', sans-serif;
-  font-weight: 400;
-  line-height: 38px;
-
-
-  top: 44px;
-}
-
-.main {}
-
-.nav_title {
-  margin: 44px 0 0 171px;
-  font-size: 21px;
-  font-weight: 600;
-  /* line-height: 38px; */
-  top: 44px;
-  font-family: 'Josefin Sans', sans-serif;
-
-}
-
-.main_left_blue_div {
-  /* position: absolute; */
-  width: 397px;
-  height: 805px;
-  margin-top: -82px;
-  margin-left: 1043px;
-
-  background-color: #062D3E;
-}
-
-.sign_up_btn {
-  /* box-sizing: border-box; */
+.header__nav-list {
   display: flex;
-  /* flex-direction: row; */
-  /* align-items: flex-end; */
-  position: relative;
+  list-style: none;
+}
 
-  width: 140px;
-  height: 62px;
-  top: 68px;
-  margin-left: 92px;
-  padding: 12px 32px;
-  gap: 10px;
+.header__nav-item {
+  font-size: 15px;
+  margin-left: 44px;
+  font-family: 'Josefin Sans', sans-serif;
+}
 
-  background-color: rgba(0, 0, 0, 0);
-  color: rgb(255, 255, 255);
+.header__nav-item:first-child {
+  margin-left: 0;
+}
 
-  border: 2px solid rgb(255, 255, 255);
-  border-radius: 198px;
+.header__nav-link {
+  text-decoration: none;
+  color: var(--primaryColor);
+  font-size: 14px;
+  font-family: 'Josefin Sans', sans-serif;
+
+}
+
+.header__button button {
+  background-color: transparent;
+  border: 2px solid #fff;
+  border-radius: 200px;
+  padding: 12px 24px;
 
   font-size: 20px;
-  line-height: 36px;
+  color: #fff;
+  transition: .4s;
+  cursor: pointer;
 }
 
-.vector_blue {
-  position: absolute;
-  margin-top: -821px;
-  margin-left: 900px;
+.header__button button:hover {
+  background-color: var(--primaryBlue);
+  color: #fff;
 }
 
+@media only screen and (max-width: 600px) {
+  .header__nav {
+    display: none;
+  }
+}
 
-.animal_gallery {
+.hero {
+  margin-bottom: 100px;
+}
+
+.hero__content {
   display: flex;
-  position: relative;
-  top: 805px;
-  width: 1440px;
-  height: 306px;
-  background-color: #ED5C01;
+  justify-content: space-between;
+  align-items: center;
 }
 
+.hero__left {}
 
+.arrow_text {
+  display: flex;
+  align-items: center;
+}
 
-.our_service {}
+.arrow_text p {
+  font-size: 24px;
+  margin-left: 15px;
+  color: var(--lightBlue);
+}
 
-.explore {
-  position: relative;
-  top: 1972px;
+.hero__left h1 {
+  font-size: 96px;
+  line-height: 92px;
+  color: var(--primaryBlue);
+  margin: 20px 0;
+}
+
+.hero__left h1 span {
+  color: var(--primaryOrange);
+}
+
+.hero__left button {
+  padding: 16px 36px;
+  border-radius: 25px;
+  background-color: var(--primaryOrange);
+  border: 0px solid transparent;
+  cursor: pointer;
+
+}
+
+.hero__right {}
+
+.hero__right-img {
+  width: 350px;
+  height: 498px;
+}
+
+.hero__right-img img {
   width: 100%;
-  height: 761px;
-  background-color: #189CAB;
+  height: 100%;
 }
 
-.customer_reviews {}
-
-.double_div {
-  position: relative;
+.hero__right-slider {
+  border-radius: 200px;
   display: flex;
-  top: 3600px;
-
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--lightBlue);
+  padding: 20px;
 }
 
-.dog_div {
-  position: relative;
-  /* display: inline-block; */
-  vertical-align: middle;
-  /* top: 3600px; */
-  width: 50%;
-  height: 324px;
-  background-color: #FBBD08;
+.hero__right-counter {
+  display: flex;
 }
 
-.subscribe {
-  position: relative;
-  /* display: disp; */
-  /* vertical-align: middle; */
-  /* top: 3600px; */
-  width: 50%;
-  height: 324px;
-  background-color: #ED5C01;
+.hero__right-counter span {
+  margin-left: 20px;
+  border-radius: 20px;
+  border: 2px solid #fff;
+  width: 11px;
+  height: 11px;
 }
 
-footer {
+.hero__right-counter span:first-child {
+  margin-left: 0;
+}
+
+.hero__right-counter span.active {
+  background-color: #fff;
+}
+
+
+@media only screen and (max-width: 1100px) {
+  .arrow_text p {
+    font-size: 20px;
+  }
+
+  .hero__left h1 {
+    font-size: 75px;
+  }
+
+  .arrow_text div img {
+    width: 56px;
+    height: 42px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .hero__right-img {
+    width: 300px;
+    height: 100%;
+  }
+
+  .arrow_text p {
+    font-size: 18px;
+  }
+
+  .arrow_text div img {
+    width: 50px;
+    height: 36px;
+  }
+}
+
+@media only screen and (max-width: 865px) {
+  .hero__right {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 765px) {
+  .hero__left h1 {
+    font-size: 60px;
+  }
+
+  .arrow_text p {
+    font-size: 15px;
+  }
+
+  .arrow_text div img {
+    width: 44px;
+    height: 30px;
+  }
+}
+
+@media only screen and (max-width: 470px) {
+  .hero__left h1 {
+    font-size: 45px;
+  }
+
+  .arrow_text p {
+    font-size: 13px;
+  }
+}
+
+.banner {
+  width: 100%;
+  height: auto;
+  padding: 10px 0 16px 0;
+  background-color: var(--primaryOrange);
+}
+
+.banner__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.banner__left {
+  display: flex;
+  align-items: center;
+}
+
+.banner__left span {
+  font-size: 20px;
+  color: #fff;
+  margin-left: 10px;
+}
+
+.banner__left p {
+  background: var(--yellow);
+  color: var(--primaryBlue);
+  font-size: 54px;
+  border-radius: 200px;
+  padding: 30px 10px;
+  text-align: center;
+  letter-spacing: 4px;
   position: relative;
-  left: 0%;
-  top: 3600px;
-  height: 380px;
-  background-color: #062D3E;
+}
+
+.banner__left p:before {
+  display: inline-block;
+  content: "";
+  position: absolute;
+  left: 20px;
+  background-repeat: no-repeat;
+  height: 32px;
+  width: 89px;
+  bottom: -30px;
+}
+
+.banner__right {}
+
+.banner__row {
+  display: flex;
+  align-items: center;
+}
+
+.banner__item {
+  cursor: pointer;
+  margin-left: 32px;
+  width: 70px;
+  height: 70px;
+  border-radius: 100px;
+}
+
+.banner__op {
+  opacity: 0;
+  margin-right: 48px;
+}
+
+.banner__item:first-child {
+  margin-left: 0;
+}
+
+.banner__item img {
+  width: 100%;
+  height: 100%;
+  border-radius: 100px;
+  filter: brightness(60%);
+  transition: .4s;
+}
+
+.banner__item img:hover {
+  filter: brightness(100%);
+}
+
+.banner__item-main {
+  position: relative;
+  top: 25px;
+  width: 114px;
+  height: 114px;
+}
+
+.banner__item-main img {
+  border: 3px solid #fff;
+  filter: brightness(100%);
+}
+
+.banner__item-main p {
+  text-align: center;
+  margin-bottom: 10px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.banner__item-main span {
+  font-size: 12px;
+  font-weight: 400;
+}
+
+@media only screen and (max-width: 1110px) {
+  .banner__left span {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 990px) {
+  .banner__content {
+    flex-direction: column;
+  }
+
+  .banner__left p {
+    display: none;
+  }
+
+  .banner__left span {
+    display: block;
+    font-size: 20px;
+    font-weight: 500;
+    margin: 20px 0;
+  }
+
+  .banner__right,
+  .banner__row {
+    width: 100%;
+    justify-content: space-between;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .banner__item {
+    width: 60px;
+    height: 60px;
+  }
+
+  .banner__row {
+    flex-wrap: wrap;
+  }
+
+  .banner__item-main {
+    top: 0;
+    left: 0;
+  }
+
+  .banner__item-main img {
+    border: 0;
+  }
+
+  .banner__item-main p {
+    display: none;
+  }
+
+  .banner__item {
+    margin-top: 10px;
+    margin-left: 0;
+  }
+
+  .banner__op {
+    opacity: 1;
+    margin-right: 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .banner__row:nth-child(2) {
+    display: none;
+  }
+
+  .banner__row {
+    justify-content: center;
+  }
+
+  .banner__item {
+    margin-left: 20px;
+  }
+}
+
+.service {
+  width: 100%;
+  height: auto;
+  margin-bottom: 100px;
+}
+
+.service__content {}
+
+.services__row {}
+
+
+
+
+
+
+.comment {
+  width: 100%;
+  height: auto;
+}
+
+.comment__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.comment__left {
+  margin-right: 40px;
+}
+
+.comment__left-img {
+  width: 542px;
+  height: 560px;
+}
+
+.comment__left-img img {
+  width: 100%;
+  height: 100%;
+}
+
+.comment__right {}
+
+.comment__right p {
+  margin: 20px 0;
+}
+
+@media only screen and (max-width: 1100px) {
+  .comment__left-img {
+    width: 300px;
+    height: 400px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .comment__content {
+    flex-direction: column;
+  }
 }
