--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,7 @@ header {
 .header__nav-list {
   display: flex;
   list-style: none;
+  /* justify-content: flex-start; */
 }
 
 .header__nav-item {
@@ -102,7 +103,16 @@ header {
   color: var(--primaryColor);
   font-size: 14px;
   font-family: 'Josefin Sans', sans-serif;
+}
 
+.link_hover {
+  background: url("../src/assets/Vector.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #FFFFFF;
+  width: 121px;
+  height: 30px;
+  text-align: center;
 }
 
 .header__button button {
@@ -110,7 +120,6 @@ header {
   border: 2px solid #fff;
   border-radius: 200px;
   padding: 12px 24px;
-
   font-size: 20px;
   color: #fff;
   transition: .4s;
@@ -462,13 +471,114 @@ header {
 .service {
   width: 100%;
   height: auto;
-  margin-bottom: 100px;
+  margin-top: 100px;
 }
 
 .service__content {}
 
-.services__row {}
+.service__content h1 {
+  font-size: 46px;
+  line-height: 38px;
+  color: var(--primaryBlue);
+}
 
+.services__row {
+  margin: 50px 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.services__item-left {
+  padding: 62px 32px;
+  height: 450px;
+  width: 88%;
+  line-height: 30px;
+  background: var(--yellow);
+  background: url("assets/yellowBG.png");
+  background-repeat: no-repeat;
+}
+
+.services__item-left p {}
+
+.services__circle {
+  width: 111px;
+  height: 111px;
+  background: #EBE3CC;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
+.services__item-right {
+  padding: 62px 32px;
+  height: 440px;
+  line-height: 30px;
+
+  background: url("assets/BGRectangle.png");
+  background-repeat: no-repeat;
+}
+
+.services__item-title {
+  margin: 30px 0 20px 0;
+  font-size: 26px;
+  font-weight: 500;
+  color: var(--primaryBlue);
+}
+
+.services__item-desc {
+  padding-right: 80px;
+  font-size: 18px;
+  color: var(--primaryBlue);
+}
+
+.services__item button {
+  margin-top: 38px;
+  padding: 12px 32px;
+  border-radius: 100px;
+  font-size: 20px;
+
+  border: 2px solid var(--primaryBlue);
+  cursor: pointer;
+  background: var(--primaryBlue);
+  transition: 0.4s;
+  color: var(--gray);
+}
+
+.services__item button:hover {
+  background: transparent;
+  color: var(--primaryBlue);
+}
+
+.services__circle-right {
+  width: 111px;
+  height: 111px;
+  background: var(--yellow);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
+.services__item-right button {
+  background: transparent;
+  color: var(--primaryBlue);
+}
+
+.services__item-right button:hover {
+  background: var(--primaryBlue);
+  color: var(--gray);
+}
+
+.services__right-arrows {
+  position: absolute;
+  display: flex;
+  justify-content: flex-end;
+  margin: 600px 0 0 700px;
+  cursor: pointer;
+}
 
 
 
