--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ body {
   padding: 0;
   background-color: var(--backgroundColor);
   font-family: 'Josefin Sans', sans-serif;
+  background-image: url('../src/assets/bg.png'), url('../src/assets/hero-blue-bg.png');
+  background-repeat: no-repeat, no-repeat;
+  background-position: top 0 right 313px, top 0 right 0;
+
 }
 
 body * {
@@ -65,7 +69,7 @@ body * {
 }
 
 header {
-  padding: 44px 0;
+  padding: 44px 0 10px 0;
   width: 100%;
   height: auto;
 }
@@ -75,7 +79,6 @@ header {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  /* padding: 30px 0; */
 }
 
 .header__logo {}
@@ -85,7 +88,6 @@ header {
 .header__nav-list {
   display: flex;
   list-style: none;
-  /* justify-content: flex-start; */
 }
 
 .header__nav-item {
@@ -138,7 +140,7 @@ header {
 }
 
 .hero {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
 .hero__content {
@@ -147,7 +149,10 @@ header {
   align-items: center;
 }
 
-.hero__left {}
+.hero__left {
+  position: relative;
+  padding-left: 50px;
+}
 
 .arrow_text {
   display: flex;
@@ -183,8 +188,8 @@ header {
 .hero__right {}
 
 .hero__right-img {
-  width: 350px;
-  height: 498px;
+  width: 496px;
+  height: 701px;
 }
 
 .hero__right-img img {
@@ -471,7 +476,7 @@ header {
 .service {
   width: 100%;
   height: auto;
-  margin-top: 100px;
+  margin: 100px 0;
 }
 
 .service__content {}
@@ -484,7 +489,6 @@ header {
 
 .services__row {
   margin: 50px 0;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -516,7 +520,6 @@ header {
   padding: 62px 32px;
   height: 440px;
   line-height: 30px;
-
   background: url("assets/BGRectangle.png");
   background-repeat: no-repeat;
 }
@@ -539,7 +542,6 @@ header {
   padding: 12px 32px;
   border-radius: 100px;
   font-size: 20px;
-
   border: 2px solid var(--primaryBlue);
   cursor: pointer;
   background: var(--primaryBlue);
@@ -573,30 +575,34 @@ header {
 }
 
 .services__right-arrows {
-  position: absolute;
+  position: relative;
   display: flex;
   justify-content: flex-end;
-  margin: 600px 0 0 700px;
+  top: 300px;
   cursor: pointer;
 }
 
-
-
-
+.services__right-arrows img {
+  position: absolute;
+  bottom: 1px;
+  right: 1px;
+}
 
 .comment {
   width: 100%;
   height: auto;
+  background-color: var(--lightBlue);
 }
 
 .comment__content {
+  padding: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .comment__left {
-  margin-right: 40px;
+  margin: 0 30px 0 0;
 }
 
 .comment__left-img {
@@ -609,21 +615,217 @@ header {
   height: 100%;
 }
 
-.comment__right {}
+.comment__right {
+  padding-left: 15px;
+  color: var(--backgroundColor);
+}
+
+.comment__right h1 {
+  font-size: 46px;
+  line-height: 60px;
+}
 
 .comment__right p {
   margin: 20px 0;
+  font-size: 22px;
+  line-height: 34px;
 }
 
-@media only screen and (max-width: 1100px) {
-  .comment__left-img {
-    width: 300px;
-    height: 400px;
+.comment__right button {
+  margin-top: 38px;
+  padding: 12px 32px;
+  border-radius: 100px;
+  font-size: 20px;
+  border: 2px solid var(--primaryBlue);
+  cursor: pointer;
+  background: var(--primaryBlue);
+  transition: 0.4s;
+  color: var(--gray);
+}
+
+.comment__right button:hover {
+  background: transparent;
+  color: var(--backgroundColor);
+}
+
+.comment__right ul {
+  margin-top: 25px;
+  font-weight: 500;
+  font-size: 22px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  list-style-type: circle;
+  margin-left: 18px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .comment__content {
+    flex-direction: column;
   }
 }
+
+@media only screen and (max-width: 1100px) {}
 
 @media only screen and (max-width: 700px) {
   .comment__content {
     flex-direction: column;
   }
+}
+
+.review {
+  width: 100%;
+  height: auto;
+  background-image: url('../src/assets/star1.png');
+  background-repeat: no-repeat;
+  background-position: top 0 right 0;
+}
+
+.review__content {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.review__left {
+  position: relative;
+  width: 50%;
+  height: 634px;
+  margin: 100px 0 130px 0;
+  border: 2px solid #062D3E;
+  border-radius: 36px;
+}
+
+.review__left img {
+  width: 100%;
+  height: 100%;
+}
+
+/* ! .review__left-quote {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  left: 320px;
+  bottom: 230px;
+
+  background-image: url(assets/quote-star.png);
+  background-repeat: no-repeat;
+
+  width: 136px;
+  height: 136px;
+}
+
+! .review__left-quote-img {
+  width: 80px;
+  height: 53px;
+} */
+
+.review__left-slider {
+  position: relative;
+  width: 244px;
+  height: 54px;
+}
+
+.review__left-slider-img {
+  position: absolute;
+  bottom: 30px;
+  left: 145px;
+  cursor: pointer;
+}
+
+.review__right {
+  width: 50%;
+  margin: 0 0 0 20px;
+}
+
+.review__right h1 {
+  font-weight: 600;
+  font-size: 46px;
+  line-height: 60px;
+  color: var(--primaryBlue);
+}
+
+.review__right p {
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 34px;
+  padding: 27px 28px 68px 34px;
+}
+
+.review__p-text {
+  width: 475px;
+  height: 333px;
+  margin: 15px 0 33px;
+
+  background: url(assets/bg1.png);
+  background-repeat: no-repeat;
+}
+
+.review-arrows {
+  position: absolute;
+  display: flex;
+  justify-content: flex-end;
+  cursor: pointer;
+}
+
+.subscribe {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.subscribe__left {
+  width: 50%;
+  height: 324px;
+  background-color: var(--yellow);
+}
+
+.subscribe__right {
+  width: 50%;
+  height: 324px;
+  background-color: var(--primaryOrange);
+  background-image: url('../src/assets/yellowOrnament.png');
+  background-repeat: no-repeat;
+  background-position: top right;
+}
+
+.subscribe__right h3{
+  font-size: 46px;
+  line-height: 60px;
+  font-weight: 600;
+  color: var(--primaryBlue);
+  margin: 52px 0 0 65px;
+}
+
+.subscribe__right input {
+  width: 474px;
+  height: 45px;
+  margin: 50px 0 0 64px;
+  border: 0;
+  
+  background-color: var(--primaryOrange);
+}
+
+.subscribe__right input::placeholder {
+  font-size: 26px;
+  line-height: 28px;
+  letter-spacing: 1%;
+  color: #fff;
+}
+
+.subscribe__right button {
+  background-color: var(--primaryOrange);
+  border: 0px;
+}
+
+.subscribe__right hr {
+  width: 505px;
+  margin: 0 0 0 64px;
 }
