--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ body * {
   }
 }
 
-/* ! HEADER */
+/* ~ HEADER */
 header {
   padding: 44px 0 10px 0;
   width: 100%;
@@ -141,7 +141,7 @@ header {
   }
 }
 
-/* ! HERO */
+/* ~ HERO */
 
 .hero {
   margin-bottom: 50px;
@@ -186,6 +186,8 @@ header {
   background-color: var(--primaryOrange);
   border: 0px solid transparent;
   cursor: pointer;
+  color: white;
+  font-size: 15px;
 }
 
 .hero__right {}
@@ -229,7 +231,7 @@ header {
   background-color: #fff;
 }
 
-/* ! HERO MEDIA */
+/* ~ HERO MEDIA */
 
 @media only screen and (max-width: 1100px) {
   .arrow_text p {
@@ -293,7 +295,7 @@ header {
   }
 }
 
-/* ! BANNER */
+/* ~ BANNER */
 
 .banner {
   width: 100%;
@@ -366,8 +368,8 @@ header {
 }
 
 .banner__item img {
-  width: 100%;
-  height: 100%;
+  width: 120%;
+  height: 120%;
   border-radius: 100px;
   filter: brightness(60%);
   transition: .4s;
@@ -402,7 +404,7 @@ header {
   font-weight: 400;
 }
 
-/* ! BANNER MEDIA */
+/* ~ BANNER MEDIA */
 
 @media only screen and (max-width: 1110px) {
   .banner__left span {
@@ -481,7 +483,7 @@ header {
   }
 }
 
-/* ! SERVICES */
+/* ~ SERVICES */
 
 .service {
   width: 100%;
@@ -598,7 +600,7 @@ header {
   right: 1px;
 }
 
-/* ! COMMENT */
+/* ~ COMMENT */
 
 .comment {
   width: 100%;
@@ -671,7 +673,7 @@ header {
   margin-left: 18px;
 }
 
-/* ! COMMENT MEDIA */
+/* ~ COMMENT MEDIA */
 @media only screen and (max-width: 1200px) {
   .comment__content {
     flex-direction: column;
@@ -686,7 +688,7 @@ header {
   }
 }
 
-/* ! REVIEW */
+/* ~ REVIEW */
 
 .review {
   width: 100%;
@@ -787,6 +789,7 @@ header {
   cursor: pointer;
 }
 
+/* ~ SUBSCRIBE */
 .subscribe {
   width: 100%;
   height: auto;
@@ -812,7 +815,6 @@ header {
   left: 200px;
   bottom: 0px;
 }
-
 
 .subscribe__right {
   width: 50%;
@@ -858,4 +860,35 @@ header {
 .subscribe__right hr {
   width: 505px;
   margin: 0 0 0 64px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--primaryBlue);
+  width: 100%;
+  height: 265px;
+}
+
+.footer__logo {
+  cursor: pointer;
+}
+
+.footer__links ul {
+  display: flex;
+  color: #fff;
+  text-decoration: none;
+  list-style-type: none;
+  font-size: 16px;
+  line-height: 42px;
+}
+
+.footer__links li {
+  margin: 15px 0 0 32px;
+  cursor: pointer;
+}
+
+.footer__links li:first-child {
+  margin-left: 0;
 }
